--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.3",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.1",
+    "nodemailer-express-handlebars": "^6.1.0",
     "nodemon": "^2.0.20",
+    "path": "^0.12.7",
     "pg": "^8.8.0"
   }
 }
