--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.2",
     "express-validator": "^6.14.3",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.0",
